--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script>
         $(document).ready(function () {
             $("button").click(function () {
-                $("#div1").load("http://www.w3schools.com/jquery/demo_test.txt");
+                $("#div1").load("demo_test.txt");
             });
         });
     </script>
