--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script>
+        // $(document).ready(function () {
+        //     $("button").click(function () {
+        //         $("#div1").load("demo_test.txt");
+        //     });
+        // });
+
+        // var head = document.getElementsByTagName('body');
+        // head[0].innerHTML = '<object id="t" type=text/html data='+html_file+'></object>';
+
+        //insert demo.html'dom into index.html's body
         $(document).ready(function () {
-            $("button").click(function () {
-                $("#div1").load("demo_test.txt");
-            });
+            $("body").load("demo.html");
         });
     </script>
 </head>
 <body>
 
-    <div id="div1"><h2>Let jQuery AJAX Change This Text</h2></div>
-    <button>Get External Content</button>
+    <!-- <div id="div1"><h2>Let jQuery AJAX Change This Text</h2></div> -->
+    <!-- <button>Get External Content</button> -->
 
 </body>
 </html>
