--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         $(document).ready(function () {
             $("body").load("demo.html");
         });
+
+        var get_h1 = document.getElementsByTagName('h1').value;
+        console.log(get_h1); 
     </script>
 </head>
 <body>
