--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         //insert demo.html'dom into index.html's body
         $(document).ready(function () {
             $("body").load("demo.html");
-
-            var get_h1 = $('h1').html();
-            console.log(get_h1); 
         })
+
+        // var get_h1 = $('h1').html();
+        // console.log(get_h1); 
     </script>
 </head>
 <body>
