--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             $("body").load("demo.html");
         })
 
-        // var get_h1 = $('h1').html();
-        // console.log(get_h1); 
+        var get_h1 = $('h1').html();
+        console.log(get_h1); 
     </script>
 </head>
 <body>
