--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         $(document).ready(function () {
             $("body").load("demo.html");
 
-            var get_h1 = $('h1').html();
-            console.log(get_h1); 
+            // var get_h1 = $('h1').html();
+            console.log($('h1').html()); 
         })
 
         
