--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $(document).ready(function () {
             $("body").load("demo.html");
 
-            // var get_h1 = $('h1').html();
+            var get_h1 = $('body h1').html();
             console.log($('h1').html()); 
         })
 
