--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <h1>Hello Kitty</h1>
+    
 
     <script>
         // $(document).ready(function () {
@@ -17,21 +17,21 @@
         // head[0].innerHTML = '<object id="t" type=text/html data='+html_file+'></object>';
 
         //insert demo.html'dom into index.html's body
-        var get_h1 = $('body h1').html();
-        console.log($('h1').html()); 
+        // var get_h1 = $('body h1').html();
+        // console.log($('h1').html()); 
 
-        // $(document).ready(function () {
-        //     $("body").load("demo.html");
+        $(document).ready(function () {
+            // $("body").load("demo.html");
 
-        //     var get_h1 = $('body h1').html();
-        //     console.log($('h1').html()); 
-        // })
+            var get_h1 = $('body h1').html();
+            console.log($('h1').html()); 
+        })
 
         
     </script>
 </head>
 <body>
-
+    <h1>Hello Kitty</h1>
     <!-- <div id="div1"><h2>Let jQuery AJAX Change This Text</h2></div> -->
     <!-- <button>Get External Content</button> -->
 
