--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             // $("body").load("demo.html");
 
             var get_h1 = $('body h1').html();
-            console.log($('h1').html()); 
+            console.log(get_h1); 
         })
 
         
