--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
         // console.log($('h1').html()); 
 
         $(document).ready(function () {
-            $("body").load("demo.html");
-
-            var get_h1 = $('body h1').html();
+            var get_h1 = $('head h1').html();
             console.log(get_h1); 
         })
 
@@ -31,6 +29,9 @@
     </script>
 </head>
 <body>
+    <script>
+        $("head").load("demo.html");
+    </script>
     <!-- <h1>Hello Kitty</h1> -->
     <!-- <div id="div1"><h2>Let jQuery AJAX Change This Text</h2></div> -->
     <!-- <button>Get External Content</button> -->
