--- a/index.html
+++ b/index.html
@@ -23,15 +23,29 @@
             this.text = text;
         };
 
-        MagicText.prototype.load = function(html_file,cb) {
-            $("head").load(html_file);//html_file = 'demo.html'
+        // MagicText.prototype.load = function(html_file,cb) {
+        //     $("head").load(html_file);//html_file = 'demo.html'
 
-            $(document).ready(function () {
-                var demo = $('head h1').html();
-                // console.log(get_h1); 
-                cb(demo);
-            })
+        //     $(document).ready(function () {
+        //         var demo = $('head h1').html();
+        //         // console.log(get_h1); 
+        //         cb(demo);
+        //     })
 
+        // };
+
+        MagicText.prototype.load = function(html_file) {
+
+            var dfd = $.Deferred();
+            
+            if($('head').load(html_file)){
+                dtd.resolve();
+                console.log('順利讀取檔案');
+            }else{
+                dtd.reject();
+                console.log('讀取檔案失敗');
+            }
+            return dfd.promise();
         };
 
         // $(document).ready(function () {
@@ -53,7 +67,10 @@
             // console.log('myRender function is working');
         }
 
-        magicText.load('demo.html',myRender);
+        magicText
+            .load('demo.html');
+
+        // magicText.load('demo.html',myRender);
     </script>
     <!-- <h1>Hello Kitty</h1> -->
     <!-- <div id="div1"><h2>Let jQuery AJAX Change This Text</h2></div> -->
