--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         }
 
         magicText
-            .load('demo.html');
+            .load('dem.html');
 
         // magicText.load('demo.html',myRender);
     </script>
