--- a/index.html
+++ b/index.html
@@ -34,19 +34,34 @@
 
         // };
 
+        $.when($.ajax( "/demo.html" ))
+            .then(load,load_fail);
+
         MagicText.prototype.load = function(html_file) {
 
             var dfd = $.Deferred();
             
-            if($('head').load(html_file)){
-                dfd.resolve();
-                console.log('順利讀取檔案');
-            }else{
-                dfd.reject();
-                console.log('讀取檔案失敗');
-            }
+            $('head').load(html_file);
+            console.log('順利讀取檔案');
+            dfd.resolve();
+
+            // if($('head').load(html_file)){
+            //     dfd.resolve();
+            //     console.log('順利讀取檔案');
+            // }else{
+            //     dfd.reject();
+            //     console.log('讀取檔案失敗');
+            // }
+
             return dfd.promise();
         };
+
+        MagicText.prototype.load_fail = function(){
+            dfd.reject();
+            console.log('讀取檔案失敗');
+
+            return dfd.promise();
+        }
 
         // $(document).ready(function () {
         //     var get_h1 = $('head h1').html();
