--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             
         // };
 
-        MagicText.prototype.thennnnn = function(cb){
+        MagicText.prototype.then = function(cb){
             $(document).ready(function () {
                 var demo = $('body h1').html();
 
@@ -81,7 +81,7 @@
 
         magicText
             // .load('demo.html')
-            .thennnnn(myRender);
+            .then(myRender);
 
 
         // magicText.load('demo.html',myRender);
