--- a/index.html
+++ b/index.html
@@ -34,28 +34,28 @@
 
         // };
 
-        // MagicText.prototype.load = function(html_file) {
-        //     var html_file = html_file;
-        //     var dfd = $.Deferred();
+        MagicText.prototype.load = function(html_file) {
+            var html_file = html_file;
+            var dfd = $.Deferred();
 
-        //     $.when($.ajax("/cross_test/"+html_file))
-        //         .then(load,load_fail);
+            $.when($.ajax("/cross_test/"+html_file))
+                .then(load,load_fail);
 
-        //     function load(html_file){
-        //         $('head').load(html_file);
-        //         dfd.resolve();
-        //         console.log('順利讀取檔案');
-        //     };
+            function load(html_file){
+                $('head').load(html_file);
+                dfd.resolve();
+                console.log('順利讀取檔案');
+            };
 
-        //     function load_fail(){
-        //         dfd.reject();
-        //         console.log('讀取檔案失敗');      
-        //     };
+            function load_fail(){
+                dfd.reject();
+                console.log('讀取檔案失敗');      
+            };
 
-        //     return this;
-        //     // return dfd.promise();
+            return this;
+            // return dfd.promise();
             
-        // };
+        };
 
         MagicText.prototype.then = function(cb){
             $(document).ready(function () {
@@ -80,7 +80,7 @@
         }
 
         magicText
-            // .load('demo.html')
+            .load('demo.html')
             .then(myRender);
 
 
