--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <h1>Hello Kitty</h1>
+    <!-- <h1>Hello Kitty</h1> -->
     <script>
 
         // $(document).ready(function () {
