--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         MagicText.prototype.then = function(cb){
             $(document).ready(function () {
-                var demo = $('body h1').html();
+                var demo = $('head h1').html();
 
                 cb(demo);
             })
