--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 console.log('讀取檔案失敗');      
             };
 
-            return this;
+            // return this;
             // return dfd.promise();
             
         };
@@ -82,7 +82,7 @@
         }
 
         magicText
-            .load('deo.html')
+            .load('demo.html')
             .then(myRender);
 
 
