--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 console.log('讀取檔案失敗');      
             };
 
-            // return this;
+            return [this,dfd.promise()];
             // return dfd.promise();
             
         };
