--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         // };
 
         MagicText.prototype.load = function(html_file) {
-            var html_file = html_file;
             var dfd = $.Deferred();
 
             $('head').load(html_file);
@@ -54,7 +53,7 @@
                 console.log('讀取檔案失敗');      
             };
 
-            return [this,dfd.promise()];
+            return this;
             // return dfd.promise();
             
         };
