--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         // };
 
         MagicText.prototype.load = function(html_file) {
+            //引用jQuert Deferred()
             var dfd = $.Deferred();
 
             $('head').load(html_file);
@@ -81,7 +82,7 @@
         }
 
         magicText
-            .load('demo.html')
+            .load('deo.html')
             .then(myRender);
 
 
